# kalshi-trading

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.yaml  keyword_map.yaml
scripts/: backfill_history.py  ingest_news.py  ingest_snapshot.py  run_backtest.py  seed_synthetic.py  train_model.py
src/kalshi_trader/: config.py
src/kalshi_trader/backtest/: engine.py  metrics.py  sim_exchange.py
src/kalshi_trader/data/: bigquery_client.py  db.py  gdelt_client.py  ingest.py  kalshi_client.py  models.py
src/kalshi_trader/features/: base.py  market_features.py  news_features.py
src/kalshi_trader/models/: base.py  logistic.py  naive.py  training.py  xgboost_model.py
src/kalshi_trader/strategy/: base.py  risk.py  signal.py
tests/: conftest.py
tests/test_backtest/: test_sim_exchange.py
tests/test_data/: test_db.py
tests/test_features/: test_market_features.py
tests/test_models/: test_logistic.py
tests/test_strategy/: test_signal.py
