[project]
name = "kalshi-trader"
version = "0.1.0"
description = "AI-driven automated trading system for Kalshi prediction markets"
requires-python = ">=3.10"
dependencies = [
    "kalshi-python>=2.1",
    "gdeltdoc>=1.12",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
